Complete Rewrite from Ajax-Express

--- a/views/result.hbs
+++ b/views/result.hbs
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
-	<html>
-	<head>
-		<title>Result Page</title>
-		<meta charset="utf-8">
-	</head>
-	<body>
-		<!-- <p>{{address}}</p>
-		<p>{{lat}}</p>
-		<p>{{lng}}</p>
-		 -->
-		 <p>{{error}}</p>
-		<h3>Current temperature</h3>
-		<p>{{temperature}}</p>
-		<h3>Apparent Temperature</h3>
-		<p>{{apparentTemperature}}</p>
-	</body>
-	</html>
+
+<h2>Current Weather Condition</h2>
+<h1>{{error}}</h1>
+<h4>Your Address:{{formattedaddress}}</h4>
+<h4>Temperature:{{temperature}}</h4>
+<h4>Apparent Temperature:{{apparentTemperature}}</h4>
+<h4>Details:{{weatherSummary}}</h4>
+{{!-- <h4>Your Address:{{formattedaddress}}</h4>
+<h4>Temperature:{{temperature}}</h4> --}}
