hbs to ejs and add result page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,8 @@
-    {{> header}}        
+<% include ./partials/header %>   
+    <nav class="navbar">
+    <h2  class="mx-auto">WEATHER APP</h2>    
+    </nav>
+        
     <div class="container">
      <form action="/result" method="post" id="form-container">
      <div class="input-group">
@@ -7,6 +11,8 @@
        <button  class="btn btn-info close-btn" type="submit"><i class="fa fa-search fa-fw"></i> Search</button>
         </span>
     </div>
+    <button class="btnx btn-1 btn-1e" type="submit">Weather Forecast</button>
     </form>
+
     </div>
-{{> footer}}
+<% include ./partials/footer %>
