--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -1,4 +1,4 @@
-    body{
+body{
     height: 100vh;
   width: 100vw;
   overflow: hidden;
@@ -22,6 +22,7 @@ font-weight: bold;
 line-height: 1.5;
 letter-spacing: 1px;
 opacity: 1.0;
+text-align: center;
 }
    
 #form-container{
@@ -87,4 +88,74 @@ width:50%;
 p{
     text-align: center;
     padding:0.5em;
+}
+.btnx {
+  border: none;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background: none;
+  cursor: pointer;
+  padding: 25px 80px;
+  display: inline-block;
+  margin: 15px 30px;
+  top:3%;
+  left:35%;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  outline: none;
+  position: relative;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.btnx:after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.btn-1 {
+  border: 3px solid #fff;
+  color: #fff;
+}
+.btn-1e {
+  overflow: hidden;
+}
+
+.btn-1e:after {
+  width: 100%;
+  height: 0;
+  top: 50%;
+  left: 50%;
+  background: #fff;
+  opacity: 0;
+  -webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
+  -moz-transform: translateX(-50%) translateY(-50%) rotate(45deg);
+  -ms-transform: translateX(-50%) translateY(-50%) rotate(45deg);
+  transform: translateX(-50%) translateY(-50%) rotate(45deg);
+}
+
+.btn-1e:hover,
+.btn-1e:active {
+  color: #0e83cd;
+}
+
+.btn-1e:hover:after {
+  height: 260%;
+  opacity: 1;
+}
+
+.btn-1e:active:after {
+  height: 400%;
+  opacity: 1;
+}
+
+#map{
+  height:400px;
+  width:100%;
 }
