--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -102,8 +102,6 @@ p{
   padding: 25px 80px;
   display: inline-block;
   margin: 15px 30px;
-  top:3%;
-  left:35%;
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 700;
@@ -134,7 +132,7 @@ p{
   width: 100%;
   height: 0;
   top: 50%;
-  left: 50%;
+  left: 25%;
   background: #fff;
   opacity: 0;
   -webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
@@ -154,14 +152,51 @@ p{
 }
 
 .btn-1e:active:after {
-  height: 400%;
+  height: 260%;
   opacity: 1;
 }
-
-#map{
+#beforeMap{
   height:400px;
-  width:100%;
-  border:5px solid grey;
+  width: 400px;
+  display: flex;
+  text-align: center;
+  align-items:center;
+  background-color: rgba(235,232,222,0.5);
+    background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  border-radius: 8px 8px 8px 8px;
+  -moz-border-radius: 8px 8px 8px 8px;
+  -webkit-border-radius: 8px 8px 8px 8px;
+  border: 4px solid #a8a3a8;
+}
+#mapTrigger{
+  color: rgb(54,44,57);
+  padding-left: 90px;
+  display: block;
+  text-align: center;
+  transition: 0.6s;
+}
+#mapTrigger:hover{
+  transition: 0.6s;
+  color: rgb(24,14,37);
+  text-decoration: none;
+  cursor: pointer;
+}
+#map{
+  display: none;
+  height: 400px;
+  width: 400px;
+
+  align-items: center;
+  text-align: center;
+  -webkit-box-shadow: 4px 5px 15px -2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 4px 5px 15px -2px rgba(0,0,0,0.75);
+  box-shadow: 4px 5px 15px -2px rgba(0,0,0,0.75);
+  border-radius: 8px 8px 8px 8px;
+  -moz-border-radius: 8px 8px 8px 8px;
+  -webkit-border-radius: 8px 8px 8px 8px;
+  border: 4px solid #a8a3a8;
 }
 .list-group-item{
   font-weight: bold;
@@ -172,9 +207,118 @@ p{
 #overlay{
   height: 100vh;
   background-image: url('weather.gif');
-  background-size: 20%;
+  background-size: 40%;
   background-repeat: no-repeat;
   background-position: center;
   background-color: rgb(255,231,205);
   z-index: -4;
+}
+@media (min-width: 768px) {
+  /* show 3 items */
+  .carousel-inner .active,
+  .carousel-inner .active + .carousel-item,
+  .carousel-inner .active + .carousel-item + .carousel-item {
+    display: block;
+  }
+
+  .carousel-inner
+    .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
+  .carousel-inner
+    .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left)
+    + .carousel-item,
+  .carousel-inner
+    .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left)
+    + .carousel-item
+    + .carousel-item {
+    transition: none;
+  }
+
+  .carousel-inner .carousel-item-next,
+  .carousel-inner .carousel-item-prev {
+    position: relative;
+    transform: translate3d(0, 0, 0);
+  }
+
+  .carousel-inner
+    .active.carousel-item
+    + .carousel-item
+    + .carousel-item
+    + .carousel-item {
+    position: absolute;
+    top: 0;
+    right: -33.3333%;
+    z-index: -1;
+    display: block;
+    visibility: visible;
+  }
+
+  /* left or forward direction */
+  .active.carousel-item-left + .carousel-item-next.carousel-item-left,
+  .carousel-item-next.carousel-item-left + .carousel-item,
+  .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item,
+  .carousel-item-next.carousel-item-left
+    + .carousel-item
+    + .carousel-item
+    + .carousel-item {
+    position: relative;
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+
+  /* farthest right hidden item must be abso position for animations */
+  .carousel-inner .carousel-item-prev.carousel-item-right {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    display: block;
+    visibility: visible;
+  }
+
+  /* right or prev direction */
+  .active.carousel-item-right + .carousel-item-prev.carousel-item-right,
+  .carousel-item-prev.carousel-item-right + .carousel-item,
+  .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item,
+  .carousel-item-prev.carousel-item-right
+    + .carousel-item
+    + .carousel-item
+    + .carousel-item {
+    position: relative;
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+    display: block;
+    visibility: visible;
+  }
+}
+.modal{
+  padding: 0;
+}
+.carousel-control-prev {
+    left: -2rem;
+}
+.carousel-control-prev-icon{
+  background-color: #FF0016;
+    width: 2rem;
+    height: 10rem;
+    border-radius: 50px;
+    position: absolute;
+    left:0; 
+}
+.carousel-control-next {
+    right: -2rem;
+}
+.carousel-control-next-icon{
+  background-color: #FF0016;
+    width: 2rem;
+    height: 10rem;
+    border-radius: 50px;
+    position: absolute;
+    right:0; 
+}
+
+@media (min-width: 576px){
+.modal-dialog{
+  max-width:1000px;
+  margin:0px auto; 
+}  
 }
