--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -1,13 +1,78 @@
-body{
-    height: 100vh;
-  width: 100vw;
+#mainContent{
+    height: 100%;
+  width: 100%;
   overflow: hidden;
-  background-image: url('background.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
         }
-   .navbar{
+   
+.slideshow { 
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.slideshow li { 
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  opacity: 0;
+  z-index: 0;
+  animation: imageAnimation 50s linear infinite; 
+}
+
+.slideshow li:nth-child(1) { 
+  background-image: url(./background/first.jpg) 
+}
+.slideshow li:nth-child(2) { 
+  background-image: url(./background/second.jpg);
+  animation-delay: 10s; 
+}
+.slideshow li:nth-child(3) { 
+  background-image: url(./background/third.jpg);
+  animation-delay: 20s; 
+}
+.slideshow li:nth-child(4) { 
+  background-image: url(./background/fourth.jpg);
+  animation-delay: 30s; 
+}
+.slideshow li:nth-child(5) { 
+  background-image: url(./background/fifth.jpg);
+  animation-delay: 40s; 
+}
+
+@keyframes imageAnimation { 
+  0% { 
+    opacity: 0; 
+    animation-timing-function: ease-in;
+  }
+  10% {
+    opacity: 1;
+    animation-timing-function: ease-out;
+  }
+  20% {
+    opacity: 1
+  }
+  30% {
+    opacity: 0
+  }
+}
+
+/* Older browser support - class added by modernizr */
+.no-cssanimations .slideshow li {
+  opacity: 1;
+} 
+
+.navbar{
         background-color: #0A0D12;
       background: -webkit-linear-gradient(left, #0A0D12, #595451, #0A0D12); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(left, #0A0D12, #595451, #0A0D12); /* For Opera 11.1 to 12.0 */
@@ -156,8 +221,8 @@ p{
   opacity: 1;
 }
 #beforeMap{
-  height:400px;
-  width: 400px;
+  height:350px;
+  background-image:url(./background/map.jpg); 
   display: flex;
   text-align: center;
   align-items:center;
@@ -172,7 +237,7 @@ p{
 }
 #mapTrigger{
   color: rgb(54,44,57);
-  padding-left: 90px;
+  padding: 28%;
   display: block;
   text-align: center;
   transition: 0.6s;
@@ -185,8 +250,8 @@ p{
 }
 #map{
   display: none;
-  height: 400px;
-  width: 400px;
+  height: 350px;
+  
 
   align-items: center;
   text-align: center;
