--- a/views/result.ejs
+++ b/views/result.ejs
@@ -159,6 +159,14 @@
         </div>
       </div>
 	</div>
+  <ul class="slideshow">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+
 </div>
   
 <script>
