--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
         </span>
       
     </div>
-    <div class="mx-auto" style="width: 300px;">
+    <div class="mt-4 wrapper" >
     <button class="btnx btn-1 btn-1e" type="submit" onclick="showLoader()">Weather Forecast</button>
     </div>
     </form>
@@ -30,7 +30,7 @@
 
 <footer class="footer">
       
-        <p class="text-muted ">Weather App 2017 | Created by:<a href="https://github.com/Asim1996/colorgame">Asim</a></p>
+        <p class="text-muted ">Weather App 2017 | Created by:<a href="https://github.com/Asim1996/weatherapp">Asim</a></p>
           
         </footer>
         <script async type="text/javascript" src="../scriptfile/script.js"></script>
