--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -157,6 +157,13 @@ p{
     text-align: center;
     padding:0.5em;
 }
+.wrapper{
+  text-align: center;
+}
+.icon-arrow-left:before {
+  content: "\e003";
+}
+
 .btnx {
   border: none;
   font-family: inherit;
@@ -197,7 +204,7 @@ p{
   width: 100%;
   height: 0;
   top: 50%;
-  left: 25%;
+  left: 50%;
   background: #fff;
   opacity: 0;
   -webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
@@ -220,17 +227,84 @@ p{
   height: 260%;
   opacity: 1;
 }
+.btn-1d {
+  overflow: hidden;
+}
+
+.btn-1d:after {
+  width: 0;
+  height: 103%;
+  top: 50%;
+  left: 50%;
+  background: #FF1700;
+  opacity: 0;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -ms-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.btn-1d:hover,
+.btn-1d:active {
+  color: white;
+}
+
+.btn-1d:hover:after {
+  width: 90%;
+  opacity: 1;
+}
+
+.btn-1d:active:after {
+  width: 101%;
+  opacity: 1;
+}
+.btn-1f {
+  overflow: hidden;
+}
+
+.btn-1f:after {
+  width: 101%;
+  height: 0;
+  top: 50%;
+  left: 50%;
+  background: #FF1700;
+  opacity: 0;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -ms-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.btn-1f:hover,
+.btn-1f:active {
+  color: white;
+}
+
+.btn-1f:hover:after {
+  height: 75%;
+  opacity: 1;
+}
+
+.btn-1f:active:after {
+  height: 130%;
+  opacity: 1;
+}
+
 #beforeMap{
   height:350px;
-  background-image:url(./background/map.jpg); 
+  background: #00c6ff;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ 
   display: flex;
   text-align: center;
   align-items:center;
   background-color: rgba(235,232,222,0.5);
-    background-position: center;
+/*    background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  border-radius: 8px 8px 8px 8px;
+*/  
+border-radius: 8px 8px 8px 8px;
   -moz-border-radius: 8px 8px 8px 8px;
   -webkit-border-radius: 8px 8px 8px 8px;
   border: 4px solid #a8a3a8;
