--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,8 +5,9 @@
     <title>Weather App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="icon" href="/stylesheet/img/Weather.png" type="image/png" sizes="16x16">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/stylesheet/style.css">
+        <link rel="stylesheet" href="../stylesheet/lib/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Lobster" rel="stylesheet">
+         <link rel="stylesheet" type="text/css" href="/stylesheet/productionstyle.min.css">
 </head>
 <body>
     
